exports[`BadCopy`] = `
<div>
  <button
    className="copy__button"
    data-clipboard-target="#copy__button__target_7b79c82d-d2f2-4041-822d-dcb1381d385e">
    Copy !
  </button>
  <div
    className="copy-tag"
    id="copy__button__target_7b79c82d-d2f2-4041-822d-dcb1381d385e">
    #foo #baz #bar
  </div>
  <noscript />
</div>
`;

exports[`Copy`] = `
<div>
  <span>
    <button
      className="__copy__button__"
      data-clipboard-target="#copy__button__target_4c6617ab-c6b6-49be-9b6b-debbc963cb05">
      Copy !
    </button>
    <div
      className="copyString_k502ai"
      id="copy__button__target_4c6617ab-c6b6-49be-9b6b-debbc963cb05">
      #foo #baz #bar
    </div>
  </span>
  <noscript />
</div>
`;

exports[`YarisugiCopy`] = `
<div>
  <span>
    <button
      className="__copy__button__"
      data-clipboard-target="#copy__button__target_7c178bb9-2643-4e96-b848-0d308bd2534c">
      Copy !
    </button>
    <div
      className="copyString_k502ai"
      id="copy__button__target_7c178bb9-2643-4e96-b848-0d308bd2534c">
      #foo #baz #bar
    </div>
  </span>
  <noscript />
</div>
`;
